# warehouse/urls.py
@@ -3,6 +3,7 @@ from warehouse.views.auth import AuthViewSet
 from warehouse.views.user_warehouse import UserWarehouseViewSet
 from warehouse.views.product import ProductViewset
 from warehouse.views.ticket import TicketViewSet
+from warehouse.views.location import LocationViewSet
 
 router = routers.DefaultRouter(trailing_slash=False)
 
@@ -15,5 +16,7 @@ router.register(
 router.register(prefix=r"product", viewset=ProductViewset, basename="product")
 
 router.register(prefix=r"ticket", viewset=TicketViewSet, basename="ticket")
+
+router.register(prefix=r"location", viewset=LocationViewSet, basename="location")
 
 urlpatterns = router.urls
